apps/demo-nginx/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  namespace: demo
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
